--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   "lint-staged": {
     "{src,tests}/**/*.ts": [
       "prettier --write",
-      "tslint --fix",
+      "eslint --fix",
       "git add"
     ]
   }
